syntax = "proto3";
package clientchannel;

message IntroduceGdprOnFieldRequest {
	string topic = 1;
	string event_type = 2;
	string field_name = 3;
	string default_value = 4;
}

message IntroduceGdprOnFieldResponse {}
